--- a/frontend/testride/src/App.css
+++ b/frontend/testride/src/App.css
@@ -12,7 +12,7 @@ height: 100%;*/
     width: 100%;
     height: auto;
     padding-bottom: 0px;
-    left: 38px;
+    left: 100px;
     top: 437px;
     display: flex;
     justify-content: space-around;
@@ -20,14 +20,58 @@ height: 100%;*/
 }
 
 .Beers {
-    width: 500px;
-    height: 1200px;
-    border-radius: 10px;
-    margin: 20px;
+    width: 400px;
+    height: 1100px;
+    margin: 50px;
     justify-content: flex-start;
 }
 
-.first_brewed {
-    font-size: 24px;
-    color: black;
+.boutonNextPre {
+    position: absolute;
+    top: 12500px;
+    bottom: 50;
+    left: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 80px;
+}
+
+.boutonPrev {
+    width: 150px;
+    height: 60px;
+    border: 2px solid red;
+    border-radius: 2px;
+    margin-right: 30px;
+    font-size: 20px;
+}
+
+.boutonNext {
+    width: 150px;
+    height: 60px;
+    border: 2px solid red;
+    border-radius: 2px;
+    margin-right: 30px;
+    font-size: 20px;
+}
+
+.page-numbers {
+    position: absolute;
+    top: 12500px;
+    bottom: 50;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    margin-left: 20%;
+}
+
+.page-number {
+    margin: 10px;
+    font-size: 30px;
+}
+
+.page-number.active {
+    color: red;
 }
