--- a/frontend/testride/src/App.css
+++ b/frontend/testride/src/App.css
@@ -2,47 +2,44 @@ body {
     /*width: 92%;
 height: 100%;*/
     width: 100%;
-    height: 1095px;
+    height: 1700px;
     left: 200px;
     top: 171px;
 }
 
 .afficheProduct {
     position: absolute;
-    width: 100%;
-    height: auto;
-    padding-bottom: 0px;
-    left: 100px;
-    top: 437px;
+    width: 90%;
+    height: 100%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-left: 200px;
+    margin-bottom: 200px;
 }
 
 .Beers {
-    width: 400px;
-    height: 1100px;
-    margin: 50px;
+    margin: 30px;
     justify-content: flex-start;
+    width: 400px;
 }
 
 .boutonNextPre {
     position: absolute;
-    top: 12500px;
-    bottom: 50;
-    left: 500px;
+    top: 3000px;
+    left: 39%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    margin-top: 80px;
+    margin-top: 100px;
 }
 
 .boutonPrev {
     width: 150px;
     height: 60px;
-    border: 2px solid red;
-    border-radius: 2px;
+    border: 1px solid black;
+    border-radius: 10px;
     margin-right: 30px;
     font-size: 20px;
 }
@@ -50,21 +47,20 @@ height: 100%;*/
 .boutonNext {
     width: 150px;
     height: 60px;
-    border: 2px solid red;
-    border-radius: 2px;
+    border: 1px solid black;
+    border-radius: 10px;
     margin-right: 30px;
     font-size: 20px;
 }
 
 .page-numbers {
     position: absolute;
-    top: 12500px;
-    bottom: 50;
+    top: 3050px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    margin-left: 20%;
+    margin-left: 38.5%;
 }
 
 .page-number {
@@ -74,4 +70,76 @@ height: 100%;*/
 
 .page-number.active {
     color: red;
+}
+
+.imgabanner {
+    width: 90%;
+    height: 500px;
+    margin-left: 100px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+img {
+    width: 150px;
+    height: 300px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    color: black;
+}
+
+
+/*.............................FicheResource...............................................*/
+
+.BeerInfo {
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
+.imgDetailBeer {
+    margin-left: 40%;
+}
+
+.nameInfo {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    color: brown
+}
+
+.taglineInfo,
+.first_brewed,
+.description {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px small;
+}
+
+.btn-Sauvgarder {
+    width: 150px;
+    height: 60px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-left: 40%;
+    margin-top: 50px;
+    background-color: crimson
+}
+
+.NotFound {
+    margin-top: 200px;
+}
+
+.notfound-h1 {
+    text-align: center;
+}
+
+.notfound-p {
+    text-align: center;
+    font-size: 30px;
 }
