--- a/frontend/testride/src/App.css
+++ b/frontend/testride/src/App.css
@@ -74,7 +74,7 @@ height: 100%;*/
 
 .imgabanner {
     width: 90%;
-    height: 500px;
+    height: 400px;
     margin-left: 100px;
     margin-bottom: 100px;
     margin-top: 100px;
@@ -137,9 +137,44 @@ a h2 {
 
 .notfound-h1 {
     text-align: center;
+    color: red;
 }
 
 .notfound-p {
     text-align: center;
     font-size: 30px;
+}
+
+.nav {
+    width: 150px;
+    height: 40px;
+    font-size: 30px;
+    margin-left: 80%;
+    margin-top: 50px;
+}
+
+.nom-année {
+    width: 100px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.input-recherche {
+    width: 200px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+.btn-chercher {
+    width: 100px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-left: 5px;
 }
